--- a/apps/balance/src/app/pages/blog/blog-post-page.module.scss
+++ b/apps/balance/src/app/pages/blog/blog-post-page.module.scss
@@ -106,10 +106,10 @@
     }
     h2 {
       @media (max-width: 600px) {
-        font-size: 11px !important;
+        font-size: 12px !important;
       }
       @media (max-width: 420px) {
-        font-size: 9px !important;
+        font-size: 12px !important;
       }
     }
     div:last-child {
